--- a/index.html
+++ b/index.html
@@ -129,13 +129,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
-          <p class="lead">
-            <strong>Poniżej obrazek koszyka z Wizz Air.</strong>
-          </p>
-          <img src="./public/images/basket_wizzair.png" />
-        </div>
-        <div class="col-8">
+        <div class="col-sm-8 text-center">
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <p class="lead">
@@ -201,6 +195,12 @@
               </p>
             </li>
           </ul>
+        </div>
+        <div class="col text-center">
+          <p class="lead">
+            <strong>Poniżej obrazek koszyka z Wizz Air.</strong>
+          </p>
+          <img src="./public/images/basket_wizzair.png" />
         </div>
       </div>
       <div class="row">
