Change in transport + change in overall price

--- a/index.html
+++ b/index.html
@@ -205,19 +205,26 @@
       </div>
       <div class="row">
         <div class="col">
-          <h2 class="display-4">Transport w Chorwacji</h2>
+          <h2 class="display-4"><del>Transport w Chorwacji</del></h2>
+          <h3>
+            Będzie kminiony na miejscu albo bus + ewentualny wynajem w
+            <strong>Makarska</strong>. Jak już będzie wiadomo coś więcej to
+            zaktualizuję.
+          </h3>
           <p class="lead">
-            W kwesti transportu w Chorwacji, to chcemy wynająć samochód.
-            <strong>Pięciosobowa</strong> Skoda Octavia za cenę
-            <strong>1980 zł</strong> za 10 dni, czyli za osobę wychodzi
-            <strong>247,50 zł</strong>. Auto dostajemy z pełnym bakiem na
-            lotnisku w <strong>Splicie</strong>, więc na trasę ze
-            <strong>Splitu</strong> do <strong>Makarsk</strong> i z powrotem,
-            gdzie jest około ~80km w jedną stronę, powinno starczyć i jeszcze
-            zostanie. Kierowcą mogę być ja, a z racji tego, że będzie nas 8
-            osób, to będziemy jechać na dwa razy z lotniska i do lotniska.
-            Obstawiam, że jakieś tankowanie będzie potrzebne, ale ceny paliwa są
-            zbliżone do polskich, więc dużo to nas nie wyniesie.
+            <del
+              >W kwesti transportu w Chorwacji, to chcemy wynająć samochód.
+              <strong>Pięciosobowa</strong> Skoda Octavia za cenę
+              <strong>1980 zł</strong> za 10 dni, czyli za osobę wychodzi
+              <strong>247,50 zł</strong>. Auto dostajemy z pełnym bakiem na
+              lotnisku w <strong>Splicie</strong>, więc na trasę ze
+              <strong>Splitu</strong> do <strong>Makarsk</strong> i z powrotem,
+              gdzie jest około ~80km w jedną stronę, powinno starczyć i jeszcze
+              zostanie. Kierowcą mogę być ja, a z racji tego, że będzie nas 8
+              osób, to będziemy jechać na dwa razy z lotniska i do lotniska.
+              Obstawiam, że jakieś tankowanie będzie potrzebne, ale ceny paliwa
+              są zbliżone do polskich, więc dużo to nas nie wyniesie.</del
+            >
           </p>
           <p class="text-center">
             <img src="./public/images/skoda.png" style="width: 100%" />
@@ -298,9 +305,10 @@
           <h2 class="display-4">Podsumowanie</h2>
           <p class="lead">
             Reasumując, za całe wakacje (przeloty, nocleg i transport na
-            miejscu) wyjdzie nam <strong>1719,50 zł</strong> przy założeniach że
-            każda dwójka weźmie tylko jeden bagaż rejestrowany do 20kg, kupimy
-            bilety w miarę wcześnie i pojedzie nas 8 osób. <br />
+            miejscu) wyjdzie nam <del><strong>1719,50 zł</strong></del
+            ><strong>~1500 zł</strong> przy założeniach że każda dwójka weźmie
+            tylko jeden bagaż rejestrowany do 20kg, kupimy bilety w miarę
+            wcześnie i pojedzie nas 8 osób. <br />
             Nocleg zarezerowowałem ja, więc hajs za niego idzie do mnie na
             konto. Najprawdopodoniej ja też zarezerwuje samochód tam, więc też
             do mnie pieniądze. Co do lotów, to każda dwójka, indywidualnie
